--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   api:
     build:
-      context: ./spring-test
+      context: ./spring-test/spring-test
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
